유저 정보 조회 시, 응답에 성별 정보 추가
